--- a/style.css
+++ b/style.css
@@ -14,10 +14,18 @@ a:hover{
     margin-top:20px;
 }
 .bg-indicator li{
-    background-color: gray;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 0;
+    background-color: #CECECE;
 }
 .bg-indicator .active{
-    background-color: darkorange;
+    
+    background-image: linear-gradient(to right, darkorange, yellow);
+    width: 50px;
+    height: 12px;
+    border-radius: 25px;
 }
 .cc-banner {
     background-image: url(images/bg/bg-dotted.png);
@@ -73,26 +81,6 @@ button a:hover{
     border: none;
     box-shadow: 0 5px 20px lightcyan;
     border-radius: 10px;
-}
-.cc-ctgcontent::after{
-        position: absolute;
-        content: " ";
-        height: 7px;
-        width: 70px;
-        background: transparent linear-gradient(142deg, #FF9C35 0%, #FFD019 100%) 0 0 no-repeat padding-box;
-        border-radius: 10px;
-}
-#subscribe h6{
-    color:gray;
-}
-.subscribe-button{
-    background-image:linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
-    color: #fff;
-    border: none;
-    border-radius:8px;
-    padding: 5px 15px;
-    cursor: pointer;
-    margin-top: 10px;
 }
 footer{
     text-align: center;
